# k8s-secret-cli

./: Cargo.toml
src/: main.rs
