[package]
name = "kubernetes-secrets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube					= { version = "0.86.0", features = ["runtime", "derive"] }
k8s-openapi		= { version = "0.20.0", features = ["latest"] }
tokio					= { version = "1.32.0", features = ["full"] }
clap					= { version = "4.4.6" , features  = ["derive"]}
inquire				= { version = "0.6.2" }
fuzzy-matcher = { version = "0.3.7" }
